problema nga ito

--- a/app/src/main/res/layout/activity_add_preset.xml
+++ b/app/src/main/res/layout/activity_add_preset.xml
@@ -60,9 +60,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/robotoregular"
-                android:text="Unit Group"
+                android:text="Unit Group:"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp">
 
