--- a/app/src/main/res/layout/addinventorylayout.xml
+++ b/app/src/main/res/layout/addinventorylayout.xml
@@ -52,9 +52,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/robotoregular"
-                android:text="Item"
+                android:text="Item:"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp">
 
