--- a/app/src/main/res/layout/addnewpresetdialog.xml
+++ b/app/src/main/res/layout/addnewpresetdialog.xml
@@ -19,6 +19,16 @@
         android:fontFamily="@font/robotobold"
         android:textSize="25sp"
         android:textStyle="bold" />
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:text="Details"
+        android:textColor="@color/black"
+        android:fontFamily="@font/robotobold"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="start"/>
 
 <!--    <EditText-->
 <!--        android:id="@+id/etServiceName"-->
