--- a/app/src/main/res/layout/changegeneralsettingsdialog.xml
+++ b/app/src/main/res/layout/changegeneralsettingsdialog.xml
@@ -24,6 +24,17 @@
         android:fontFamily="@font/robotobold"
         android:textColor="@color/black"/>
 
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Details"
+            android:textColor="@color/black"
+            android:fontFamily="@font/robotobold"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
