--- a/app/src/main/res/layout/sendereditlayout.xml
+++ b/app/src/main/res/layout/sendereditlayout.xml
@@ -34,6 +34,7 @@
             android:text="Fill out the form with details about the sender's email"
             android:textColor="@color/black"
             android:layout_marginTop="15dp"
+            android:textAlignment="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:layout_gravity="start"/>
@@ -88,6 +89,8 @@
             android:theme="@style/EditTextTheme"
             app:boxStrokeWidth="10dp"
             app:errorEnabled="true"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/black"
             >
 
             <com.google.android.material.textfield.TextInputEditText
