--- a/app/src/main/res/layout/serviceseditdialog.xml
+++ b/app/src/main/res/layout/serviceseditdialog.xml
@@ -26,6 +26,16 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/robotobold"
             android:layout_gravity="center"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Details"
+            android:textColor="@color/black"
+            android:fontFamily="@font/robotobold"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"/>
 
 
         <TextView
