--- a/app/src/main/res/layout/addclientslayout.xml
+++ b/app/src/main/res/layout/addclientslayout.xml
@@ -137,6 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="45dp"
             android:paddingBottom="10dp">
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/dialog_submit"
