--- a/app/src/main/res/layout/view_reports.xml
+++ b/app/src/main/res/layout/view_reports.xml
@@ -28,7 +28,7 @@
             android:layout_marginEnd="11dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnView"
+            android:id="@+id/btnView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/view"
