--- a/app/src/main/res/layout/views_consumable.xml
+++ b/app/src/main/res/layout/views_consumable.xml
@@ -69,7 +69,7 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:text="Items"/>
+            android:text="Item"/>
 
         <TextView
             android:layout_width="15dp"
