--- a/app/src/main/res/layout/changegeneralsettingsdialog.xml
+++ b/app/src/main/res/layout/changegeneralsettingsdialog.xml
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/shopnamehint"
-            android:id="@+id/changeshopName"
+            android:id="@+id/changeShopName"
             android:inputType="text"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/branchnamehint"
-            android:id="@+id/changebranchName"
+            android:id="@+id/changeBranchName"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
