--- a/app/src/main/res/layout/activity_add_preset.xml
+++ b/app/src/main/res/layout/activity_add_preset.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
+    android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,10 +28,11 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
+            app:boxStrokeWidth="5dp"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -93,6 +95,7 @@
                 android:backgroundTint="#02aff3"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnBypass"
@@ -103,6 +106,7 @@
                 android:text="Bypass"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSubmit"
@@ -112,12 +116,76 @@
                 android:backgroundTint="#02aff3"
                 android:text="Submit"
                 android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
                 android:textColor="@android:color/white"
                 android:layout_marginRight="10dp"/>
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:weightSum="5"
+            android:background="@color/black"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Type"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Level"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Price"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+
+            <TextView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Pulse"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
