--- a/app/src/main/res/layout/activity_advanced_option.xml
+++ b/app/src/main/res/layout/activity_advanced_option.xml
@@ -93,6 +93,7 @@
                 android:backgroundTint="#02aff3"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnBypass"
@@ -103,6 +104,7 @@
                 android:text="Bypass"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSubmit"
@@ -113,10 +115,75 @@
                 android:text="Submit"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"/>
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:weightSum="5"
+            android:background="@color/black"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Type"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Level"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+            <TextView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Price"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+
+            <TextView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="Pulse"
+                android:textStyle="bold"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#fff" />
+
+
+        </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
