--- a/app/src/main/res/layout/changestaffsettingsdialog.xml
+++ b/app/src/main/res/layout/changestaffsettingsdialog.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:id="@+id/adminAuth"
         android:layout_gravity="center"
         android:background="@drawable/circleddialog"
         android:visibility="visible"
@@ -39,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Admin Password"
-                android:id="@+id/adminUsername"
+                android:id="@+id/adminPassword"
                 android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
@@ -95,6 +96,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
+        android:id="@+id/staffLayout"
         android:background="@drawable/circleddialog"
         android:visibility="gone">
 
@@ -142,6 +144,7 @@
                 android:paddingRight="15dp"
                 android:textSize="15sp"/>
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -166,6 +169,7 @@
                 android:paddingRight="15dp"
                 android:textSize="15sp"/>
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -190,6 +194,7 @@
                 android:paddingRight="15dp"
                 android:textSize="15sp"/>
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -248,6 +253,7 @@
                 android:textAllCaps="false"
                 android:textSize="16sp" />
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
